syntax = "proto3";

package example.allow_nil;

option ruby_package = "TestFixture::AllowNil";

import "google/protobuf/wrappers.proto";

message Message {
  int32 required_int32 = 1;
  int32 optional_int32 = 2;
  google.protobuf.Int32Value required_int32val = 3;
  google.protobuf.Int32Value optional_int32val = 4;

  repeated int32 required_repeated_int32 = 5;
  repeated int32 optional_repeated_int32 = 6;

  oneof required_oneof {
    int32 required_oneof_int32 = 7;
    int32 required_oneof_int64 = 8;
  }

  oneof optional_oneof {
    int32 optional_oneof_int32 = 9;
    int32 optional_oneof_int64 = 10;
  }
}
